Bug 217698 - netbook/desktop shell setting is not correctly stored
Summary: netbook/desktop shell setting is not correctly stored
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdecore (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 217653 219744 220217 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-07 11:34 UTC by Stefan Majewsky
Modified: 2009-12-28 18:07 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KAutoStart fixes (712 bytes, patch)
2009-12-18 14:42 UTC, Dario Andres
Details
Updated patch (992 bytes, patch)
2009-12-18 15:25 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Majewsky 2009-12-07 11:34:54 UTC
Version:            (using Devel)
Installed from:    Compiled sources

I tried the netbook shell, using the configuration switch in the corresponding KCM module. I found that it does not fit my workflow, and switched back to the desktop shell. However, after the next boot, the netbook shell comes up again, even though the KCM module reports the desktop shell to be enabled.

This might be related to bug 217697 (I only splitted these issues into two bugs because these could be two distinct problems).
Comment 1 Dario Andres 2009-12-07 12:49:55 UTC
I'm also experiencing this here using:

Qt: 4.6.0 (kde-qt master commit cd8595efe9aace2afdaa5db37af7cfe82b87e4aa
        Date:   Wed Nov 18 01:33:21 2009 +0100)
KDE Development Platform: 4.3.80 (KDE 4.3.80 (KDE 4.4 Beta1))
kdelibs svn rev. 1058633 / kdebase svn rev. 1058634
on ArchLinux i686 - Kernel 2.6.31.6

This morning when I logged in:
- Plasma (any of the two versions) take several seconds to appear
- Plasma Netbook appeared (I have "Desktop" selected in the KCM, but I also selected "Netbook" before).
- When I killed (kquitapp) the Netbook version, I could look at the Plasma Desktop which was behind it (weird...)
- Plasma Desktop was not really working and windows were not reacting to focus. Restarting Plasma Desktop fixed this.

BTW, bug 217653 is probably related to this
Comment 2 Dario Andres 2009-12-18 13:00:14 UTC
As stated in bug 217653 comment 4 and bug 217653 comment 5, an autostart entry for plasma-netbook is not deleted when selecting the Desktop layout again, probably causing this bug..
Comment 3 Dario Andres 2009-12-18 13:23:29 UTC
Mh, looking at the code, this seems an error in KAutostart..
Comment 4 Dario Andres 2009-12-18 13:39:36 UTC
*** Bug 217653 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2009-12-18 14:42:51 UTC
Created attachment 39149 [details]
KAutoStart fixes

- Fix the setAutostart function (it was checking the things the wrong way) + readability
- Fix a bug about the values of a global autostart .desktop files not being copied to the local instance. + Fixes a little mem leak

I'm going to commit the changes when the SVN is up again
Comment 6 Dario Andres 2009-12-18 15:25:00 UTC
Created attachment 39150 [details]
Updated patch

Improved patch to avoid possible errors when merging the entries from the global .desktop to the local copy.. (this is unrelated to the bug report itself)
Comment 7 Dario Andres 2009-12-18 16:06:57 UTC
SVN commit 1063435 by darioandres:

- Fix the setAutostarts function (it was checking the current autostart method the wrong way, and therefore
  not saving the changes properly) [bug 217698]
- Fix a bug about the values of the global autostart .desktop file not being copied to the local instance 
  (as the values of the KDesktopFile* KDesktopFile->copyTo() object were only saved to disk on deletion,
  or forcing a sync())
  - This includes a small memleak fix

BUG: 217698


 M  +5 -3      kautostart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1063435
Comment 8 Andreas Kuhl 2009-12-23 07:59:14 UTC
*** Bug 219744 has been marked as a duplicate of this bug. ***
Comment 9 Dario Andres 2009-12-28 18:07:05 UTC
*** Bug 220217 has been marked as a duplicate of this bug. ***