- Fix the setAutostarts function (it was checking the current autostart method the wrong way, and therefore   not saving the changes properly) [bug 217698] - Fix a bug about the values of the global autostart .desktop file not being copied to the local instance   (as the values of the KDesktopFile* KDesktopFile->copyTo() object were only saved to disk on deletion,   or forcing a sync())   - This includes a small memleak fix

BUG: 217698

svn path=/trunk/KDE/kdelibs/; revision=1063435